# watchdoggy

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/pi/: README.md
docs/pi/cloud-init/: meta-data  network-config  user-data
docs/superpowers/plans/: 2026-07-05-detection-zone.md  2026-07-05-doggy-detector.md  2026-07-05-thermal-governor.md  2026-07-06-dashboard-value-features.md  2026-07-07-codebase-restructure.md  2026-07-07-comms-and-polish.md  2026-07-07-watcher-smarts.md  2026-07-08-soothing-sounds.md
docs/superpowers/specs/: 2026-07-05-doggy-detector-design.md  2026-07-06-dashboard-value-features-design.md  2026-07-07-codebase-restructure-design.md  2026-07-07-deterrence-lab-batch-design.md  2026-07-08-soothing-sounds-design.md
scripts/: deploy-to-pi.sh  gen-beeps.py  harden-pi.sh  reduce-sd-writes.sh  setup-https.sh  setup-speaker-keepalive.sh  sync-pi-clock.sh
sounds/: README.md
src/doggy/: alerter.py  app.py  camera.py  config.py  detector.py  events.py  main.py  people.py  pipeline.py  safety.py  state.py  thermal.py  trigger.py  web.py  zone.py
src/doggy/core/: config.py  pacer.py  runtime.py  status.py
src/doggy/decision/: gate.py  trigger.py
src/doggy/events/: store.py
src/doggy/reaction/: clips.py  hub.py  outcome.py  recorder.py  soothing.py  sound.py
src/doggy/static/: index.html
src/doggy/vision/: analysis.py  annotate.py  camera.py  detection.py  detector.py
src/doggy/vision/filters/: base.py  person.py  zone.py
src/doggy/web/: app.py
src/doggy/web/routers/: events.py  soothing.py  talk.py
src/doggy/web/static/: index.html
tests/: test_alerter.py  test_camera.py  test_config.py  test_detector.py  test_events.py  test_people.py  test_pipeline.py  test_safety.py  test_smoke.py  test_state.py  test_thermal.py  test_trigger.py  test_web.py  test_zone.py
tests/core/: test_config.py  test_pacer.py  test_status.py
tests/decision/: test_gate.py  test_schedule.py  test_trigger.py
tests/events/: test_store.py
tests/reaction/: test_clips.py  test_hub.py  test_outcome.py  test_recorder.py  test_soothing.py  test_sound.py
tests/vision/: test_analysis.py  test_camera.py  test_detector.py
tests/vision/filters/: test_person.py  test_zone.py
tests/web/: test_api.py  test_soothing.py  test_talk.py
