[project]
name = "doggy"
version = "0.1.0"
description = "Local dog-presence detector with a deterrent speaker and a localhost dashboard"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "sounddevice>=0.4.7",
    "soundfile>=0.12",
    "pydantic-settings>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
doggy = "doggy.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

# CPU-only PyTorch. On Linux (x86_64 CI or ARM), the default PyPI `torch` wheel
# bundles CUDA (~2.5GB) which this project never uses — pin torch/torchvision to
# the CPU index there. macOS arm64 keeps the default PyPI wheel (already CPU+MPS,
# no CUDA variant exists), so the CPU index is gated to Linux only.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doggy"]

[tool.hatch.build.targets.wheel.force-include]
"src/doggy/static" = "doggy/static"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: needs model weights / real hardware (deselect with -m 'not slow')"]
