[project]
name = "doggy"
version = "0.1.0"
description = "Local dog-presence detector with a deterrent speaker and a localhost dashboard"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "ultralytics>=8.3.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "sounddevice>=0.4.7",
    "soundfile>=0.12",
    "pydantic-settings>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.32",
]

[project.scripts]
doggy = "doggy.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

# CPU-only PyTorch on ALL Linux (x86_64 CI *and* aarch64 Raspberry Pi). The
# default PyPI Linux torch wheels pull CUDA: ~2.5GB on x86_64, and a CUDA/sbsa
# build with nvidia-* deps on aarch64 — neither of which this project uses. The
# CPU index (download.pytorch.org/whl/cpu) has both x86_64 and aarch64 +cpu
# wheels, so pin all Linux to it. macOS arm64 keeps the PyPI wheel (CPU+MPS, no
# CUDA variant exists).
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doggy"]

[tool.hatch.build.targets.wheel.force-include]
"src/doggy/static" = "doggy/static"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: needs model weights / real hardware (deselect with -m 'not slow')"]
